@@ -1036,6 +1036,7 @@ LoadDLLfunc (GetUserObjectInformationA, GetUserObjectInformationA@20, user32)
 LoadDLLfunc (KillTimer, KillTimer@8, user32)
 LoadDLLfunc (MessageBoxA, MessageBoxA@16, user32)
 LoadDLLfunc (MsgWaitForMultipleObjects, MsgWaitForMultipleObjects@20, user32)
+LoadDLLfunc (OemToCharA, OemToCharA@8, user32)
 LoadDLLfunc (OemToCharW, OemToCharW@8, user32)
 LoadDLLfunc (PeekMessageA, PeekMessageA@20, user32)
 LoadDLLfunc (PostMessageA, PostMessageA@16, user32)
